feat: AuraCharacter.cpp/.h,  AuraEnemy.cpp/.h files, and remove redundant code in AuraCharacterBase.cpp/.h

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=678151BF45A0BAB665452993954C7106
-CopyrightNotice=Copyright dadavidtseng
+CopyrightNotice=
 
