--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,3 +91,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Aura.AuraPlayerController.AureContext",NewName="/Script/Aura.AuraPlayerController.AuraContext")
