feat: introduce `BP_HealthPotion` in the StartupMap.umap to test out the overlapping functionality of `AuraEffectActor`

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -95,4 +95,6 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Aura.AuraPlayerController.AureContext",NewName="/Script/Aura.AuraPlayerController.AuraContext")
++ClassRedirects=(OldName="/Script/Aura.AuraEffectAcotr",NewName="/Script/Aura.AuraEffectActor")
++FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOverlap",NewName="/Script/Aura.AuraEffectActor.OnBeginOverlap")
 
