update: infinite effects' application and removal in `AAuraEffectActor::OnBeginOverlap` and `AAuraEffectActor::OnEndOverlap`

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,4 +97,6 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Aura.AuraPlayerController.AureContext",NewName="/Script/Aura.AuraPlayerController.AuraContext")
 +ClassRedirects=(OldName="/Script/Aura.AuraEffectAcotr",NewName="/Script/Aura.AuraEffectActor")
 +FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOverlap",NewName="/Script/Aura.AuraEffectActor.OnBeginOverlap")
++PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.InstanceGameplayEffectClass",NewName="/Script/Aura.AuraEffectActor.InstantGameplayEffectClass")
++PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.InstanceEffectApplicationPolicy",NewName="/Script/Aura.AuraEffectActor.InstantEffectApplicationPolicy")
 
