update: multiple gameplay effects and parity for `AAuraEffectActor::ApplyEffectToTarget`

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -99,4 +99,5 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.OnOverlap",NewName="/Script/Aura.AuraEffectActor.OnBeginOverlap")
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.InstanceGameplayEffectClass",NewName="/Script/Aura.AuraEffectActor.InstantGameplayEffectClass")
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.InstanceEffectApplicationPolicy",NewName="/Script/Aura.AuraEffectActor.InstantEffectApplicationPolicy")
++FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.ApplyEffectToTarget",NewName="/Script/Aura.AuraEffectActor.ApplyEffectToTargetInternal")
 
