feat(player): implement click-to-move navigation with auto-run
Add comprehensive click-to-move system with spline-based pathfinding
and automatic running along navigation paths. Supports both direct
targeting and destination-based movement.

Player Controller:
- Add spline component for path visualization
- Implement AutoRun system with spline following
- Add click detection with short press threshold
- Integrate ability input callbacks (pressed/released/held)
- Support target selection and destination movement
- Add cached destination and follow time tracking
- Implement GetAuraAbilitySystemComponent helper

Configuration:
- Enable Navigation System plugin
- Configure default navigation settings
- Add input action bindings for ability system

Enemy Interface:
- Add HighlightActor method for target selection feedback

Blueprint Assets:
- Update player controller blueprint
- Configure test gameplay ability
- Update input actions and startup map

This enables ARPG-style point-and-click movement with automatic
pathfinding and smooth spline-based character navigation.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -102,3 +102,6 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.InstanceEffectApplicationPolicy",NewName="/Script/Aura.AuraEffectActor.InstantEffectApplicationPolicy")
 +FunctionRedirects=(OldName="/Script/Aura.AuraEffectActor.ApplyEffectToTarget",NewName="/Script/Aura.AuraEffectActor.ApplyEffectToTargetInternal")
 
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
+
